--- a/demoApp/demoApp/demoApp-Info.plist
+++ b/demoApp/demoApp/demoApp-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>playbasis.$(PRODUCT_NAME:rfc1034identifier)</string>
+	<string>org.haxpor.playbasisdemoapp</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
