--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 demoApp/demoApp.xcodeproj/project.xcworkspace/xcuserdata/haxpor.xcuserdatad/UserInterfaceState.xcuserstate
 demoApp/demoApp.xcodeproj/project.xcworkspace/xcshareddata/
+RestKit/
