Update .gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 demoApp/demoApp.xcodeproj/project.xcworkspace/xcuserdata/haxpor.xcuserdatad/UserInterfaceState.xcuserstate
 demoApp/demoApp.xcodeproj/project.xcworkspace/xcshareddata/
 RestKit/
+demoApp/demoApp.xcodeproj/xcuserdata/haxpor.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+demoApp/demoApp.xcodeproj/xcuserdata/
