Fix PBRequest class name conflict with iOS framework. Add location update. Fix empty quests showing in quest demo.
Added mainmenu viewcontroller to listen to location updated.
Changed PBRequest to PBRequestUnit.

--- a/demoApp/demoApp/demoApp-Info.plist
+++ b/demoApp/demoApp/demoApp-Info.plist
@@ -26,6 +26,10 @@
 	<true/>
 	<key>UIMainStoryboardFile</key>
 	<string>MainStoryboard</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Require permission to get location when app is in use</string>
+	<key>NSLocationUsageDescription</key>
+	<string>Require permission to get location when app is in use</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
