Updated .gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ demoApp/demoApp.xcodeproj/project.xcworkspace/xcshareddata/
 RestKit/
 demoApp/demoApp.xcodeproj/xcuserdata/haxpor.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
 demoApp/demoApp.xcodeproj/xcuserdata/
+pblib/pblib.xcodeproj/xcuserdata/haxpor.xcuserdatad/xcschemes/Playbasis.xcscheme
