Fix author naming at the top of every file relating to Playbasis's source code.

--- a/demoApp/demoApp WatchKit Extension/Info.plist
+++ b/demoApp/demoApp WatchKit Extension/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>org.haxpor.playbasisdemoapp.watchkitextension</string>
+	<string>com.playbasis.playbasisdemoapp.watchkitextension</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -22,6 +22,8 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
+	<key>NSHumanReadableCopyright</key>
+	<string>Copyright © 2015 Playbasis. All rights reserved.</string>
 	<key>NSExtension</key>
 	<dict>
 		<key>NSExtensionAttributes</key>
