--- a/pblib/pblibResource/Info.plist
+++ b/pblib/pblibResource/Info.plist
@@ -21,7 +21,7 @@
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2015 Maethee Chongchitnant. All rights reserved.</string>
+	<string>Copyright © 2015 Playbasis. All rights reserved.</string>
 	<key>NSPrincipalClass</key>
 	<string></string>
 </dict>
