--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ RestKit/
 demoApp/demoApp.xcodeproj/xcuserdata/haxpor.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
 demoApp/demoApp.xcodeproj/xcuserdata/
 pblib/pblib.xcodeproj/xcuserdata/haxpor.xcuserdatad/xcschemes/Playbasis.xcscheme
+pblib/Products/
