--- a/demoApp/demoApp WatchKit Extension/Info.plist
+++ b/demoApp/demoApp WatchKit Extension/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.playbasis.playbasisdemoapp.watchkitextension</string>
+	<string>org.haxpor.playbasisdemoapp.watchkitextension</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -22,8 +22,6 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
-	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2015 Playbasis. All rights reserved.</string>
 	<key>NSExtension</key>
 	<dict>
 		<key>NSExtensionAttributes</key>
@@ -34,6 +32,8 @@
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.watchkit</string>
 	</dict>
+	<key>NSHumanReadableCopyright</key>
+	<string>Copyright © 2015 Playbasis. All rights reserved.</string>
 	<key>RemoteInterfacePrincipalClass</key>
 	<string>InterfaceController</string>
 </dict>
