Update .gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ demoApp/demoApp.xcodeproj/xcuserdata/haxpor.xcuserdatad/xcdebugger/Breakpoints_v
 demoApp/demoApp.xcodeproj/xcuserdata/
 pblib/pblib.xcodeproj/xcuserdata/haxpor.xcuserdatad/xcschemes/Playbasis.xcscheme
 pblib/Products/
+pblib/pblib.xcodeproj/xcuserdata/root.xcuserdatad/
