--- a/pblib/.gitignore
+++ b/pblib/.gitignore
@@ -1,1 +1,6 @@
 pblib.xcodeproj/project.xcworkspace/xcuserdata/haxpor.xcuserdatad/
+.DS_Store
+Source/Application.h
+*.xcodeproj/*
+!*.xcodeproj/project.pbxproj
+!*.xcodeproj/xcshareddata
