--- a/demoApp/demoApp WatchKit App/Info.plist
+++ b/demoApp/demoApp WatchKit App/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>org.haxpor.playbasisdemoapp.watchkitapp</string>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -28,7 +28,7 @@
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 	<key>WKCompanionAppBundleIdentifier</key>
-	<string>org.haxpor.playbasisdemoapp</string>
+	<string>io.wasin.playbasisapitest</string>
 	<key>WKWatchKitApp</key>
 	<true/>
 </dict>
