Huge refactor code, and project's files
Moved files and better organized. Removed almost all of boiler-plate code.

--- a/pblib/Playbasis/OCMapperModelConfigure.plist
+++ b/pblib/Playbasis/OCMapperModelConfigure.plist
@@ -5,6 +5,9 @@
 	<key>models</key>
 	<array>
 		<string>PBPlayer</string>
+		<string>PBDetailedPlayer</string>
+		<string>PBBadge</string>
+		<string>PBGoods</string>
 	</array>
 </dict>
 </plist>
