Add activeQuizList api of Quiz api. Fix PBUtil's createMethodWithApiKeyUrlFromMethod method

--- a/pblib/Playbasis/OCMapperModelConfigure.plist
+++ b/pblib/Playbasis/OCMapperModelConfigure.plist
@@ -8,6 +8,7 @@
 		<string>PBDetailedPlayer</string>
 		<string>PBBadge</string>
 		<string>PBGoods</string>
+		<string>PBQuiz</string>
 	</array>
 </dict>
 </plist>
