Add more apis in Quiz api
- added randomQuiz api
- added question api

PS. So it's not a bug in OCMapper, it's due to its automatica mapping that detect singular noun from plural nouns keywords that lead to wrong class.

--- a/pblib/Playbasis/OCMapperModelConfigure.plist
+++ b/pblib/Playbasis/OCMapperModelConfigure.plist
@@ -11,6 +11,7 @@
 		<string>PBQuiz</string>
 		<string>PBQuizDetail</string>
 		<string>PBRewards</string>
+		<string>PBQuestion</string>
 	</array>
 </dict>
 </plist>
