Add engine's rule api
This in turn fixed PBEvent to cover its reward_data field for both badge or goods reward data.

--- a/pblib/Playbasis/OCMapperModelConfigure.plist
+++ b/pblib/Playbasis/OCMapperModelConfigure.plist
@@ -16,6 +16,10 @@
 		<string>PBQuizDoneGrade</string>
 		<string>PBQuestionAnswer</string>
 		<string>PBRewardData</string>
+		<string>PBEvent</string>
+		<string>PBRule</string>
+		<string>PBBadgeRewardData</string>
+		<string>PBGoodsRewardData</string>
 	</array>
 </dict>
 </plist>
