Add retrieve game item status of game api./
We use oeverloading method to cover item_id parameter in method.

--- a/pblib/Playbasis/OCMapperModelConfigure.plist
+++ b/pblib/Playbasis/OCMapperModelConfigure.plist
@@ -20,6 +20,7 @@
 		<string>PBRule</string>
 		<string>PBBadgeRewardData</string>
 		<string>PBGoodsRewardData</string>
+		<string>PBGameItemStatusRoot</string>
 	</array>
 </dict>
 </plist>
